# dj_min_max_price

./: db.sqlite3  pyproject.toml
shop/: settings.py  urls.py
webapi/: models.py  urls.py  views.py
webapi/migrations/: 0001_initial.py
